assign user permission, check access
